<resources>
    <string name="app_name">PaddleBookingApp</string>
    <string name="edit_profile">Edit profile</string>
    <string name="date_reservation">Day and Hour</string>
    <string name="player_1">User</string>
    <string name="player_2">Opponent</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="add_reservation">Add a reservation</string>
    <string name="confirm">Confirm</string>
    <string name="message">Are you sure you want to cancel this reservation?</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Reservation cancelled</string>
    <string name="erase">Remove reservation</string>
    <string name="missing_data">Please, complete all the fields</string>
    <string name="added_reservation">Reservation added</string>
    <string name="name_and_surname">Name and surname</string>
    <string name="age">Age</string>
    <string name="level">Level</string>
    <string name="sign_up">Sign up</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="user_added">User added</string>
    <string name="enter_value">You should enter a value for all fields</string>
    <string name="select_day">Select day</string>
    <string name="select_hour">Select hour</string>
    <string name="continue_to">Continue</string>
    <string name="hour">Hour</string>
    <string name="date">Date</string>
    <string name="join">Join</string>
    <string name="my_reservations">My reservations</string>
    <string name="name">Name</string>
    <string name="log_out">Log out</string>
    <string name="welcome">Welcome back</string>
    <string name="no_user">There is no opponent in this hour yet</string>
    <array name="experience_array">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
        <item>Professional</item>
    </array>
</resources>
