<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@color/colorAccent"
        android:text="@string/cancel_reservation"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/date_reservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="14dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="14dp"
        android:text="@string/date_reservation"
        android:textSize="16sp"
        android:layout_below="@+id/date_hour"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/player_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/player_1"
        android:textSize="16sp"
        android:layout_below="@+id/user_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/player_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/user_2"
        android:padding="10dp"
        android:text="@string/no_user"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/user_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_below="@+id/date_reservation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/user_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_below="@+id/player_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/date_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/date_reservation"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:padding="10dp"/>

</RelativeLayout>